--- a/.env
+++ b/.env
@@ -26,7 +26,7 @@ APP_SECRET=ea6b96c98c7380c8b43099c5060f0679
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="postgresql://guy:1234@127.0.0.1:5432/messagerie?serverVersion=15&charset=utf8"
+DATABASE_URL="postgresql://sebastien:1234@127.0.0.1:5432/messagerie?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
